--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"node --loader ts-node/esm\" src/server.ts",
+    "dev": "pnpm dlx tsx watch src/server.ts",
     "lint": "eslint 'src/**/*.ts'"
   },
   "devDependencies": {
@@ -16,6 +16,7 @@
     "install": "^0.13.0",
     "nodemon": "^3.1.10",
     "npm": "^11.5.2",
+    "pino-pretty": "^13.1.2",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
@@ -24,7 +25,7 @@
     "@types/debug": "^4.1.12",
     "bcrypt": "^6.0.0",
     "mongoose": "^8.18.0",
-    "zod": "^4.1.5",
-    "pino": "^8.12.0"
+    "pino": "^8.12.0",
+    "zod": "^4.1.5"
   }
 }
