--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "pnpm dlx tsx watch src/server.ts",
+    "test": "vitest",
     "lint": "eslint 'src/**/*.ts'"
   },
   "devDependencies": {
@@ -20,7 +21,10 @@
     "prettier": "^3.6.2",
     "prisma": "^4.15.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^1.0.0",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^2.0.12"
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
